--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9248a10cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf9461fc50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92486f0290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92486f0110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf94a37950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf94a37e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9248c8d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9248c8d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf94fc5350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcf94fc5550&gt;]</pre>
 </div>
 
 </div>
