--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3934f5950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1cc00e390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3925fab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe3925fad10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1cb1d3450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1cb1d3a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe392ba43d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe392ba45d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1cb7e0ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1cb7925d0&gt;]</pre>
 </div>
 
 </div>
