--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe8a41265d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43bb9ccd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a46dfe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe8a46dfb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f43bbde4a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f43bbde4c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a4c963d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe8a4c96590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f43bc378350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f43bc378550&gt;]</pre>
 </div>
 
 </div>
