--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0906a55210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f86f220d810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0906d4aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0906d4add0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86f1ee1050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86f1ee1190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09072e7390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09072e7590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86f24921d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86f24923d0&gt;]</pre>
 </div>
 
 </div>
