--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2241b21590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdeb5917e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f22414d4590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f22414d4790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb5ec34d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdeb5ec36d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2241a94e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2241aa00d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb64d6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdeb648d090&gt;]</pre>
 </div>
 
 </div>
