--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdeb5917e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49d2a3acd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb5ec34d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdeb5ec36d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d2e45490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49d2e45690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdeb64d6590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdeb648d090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d3402e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49d340f0d0&gt;]</pre>
 </div>
 
 </div>
