--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe770979a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f32b78858d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe77065a510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe77065a710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f32b71e5410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f32b71e5610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe770c0be10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe770c0bfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f32b7794d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f32b7794f50&gt;]</pre>
 </div>
 
 </div>
