--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fed66328650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f6a66f110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed66614590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed66614790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f6aa7a710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f6aa7a910&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed66bd6dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed66bd6fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f6b093f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f6b0211d0&gt;]</pre>
 </div>
 
 </div>
