--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ddb423350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc97fa1bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddb807690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ddb807890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc979365d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc979367d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ddbdc7f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5ddbdd51d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc97ef6e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc97f02090&gt;]</pre>
 </div>
 
 </div>
