--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83f425ddd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa524874890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83f45225d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83f45227d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa524b52510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa524b52710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83f4adedd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83f4adefd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa525160510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa525103fd0&gt;]</pre>
 </div>
 
 </div>
