--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9fa1c8c750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f752ffad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9fa1934590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9fa1934350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f74f5a2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f74f3f790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9fa1ef2e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9fa1f69f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f75578b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f75501fd0&gt;]</pre>
 </div>
 
 </div>
