--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdccfee7b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6a3f04fdd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcd02e2890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdcd02db550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a3f32b4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6a3f32b6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdcd08fd150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdcd088ddd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a3f93e510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6a3f8e7f90&gt;]</pre>
 </div>
 
 </div>
