--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f675aea6b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4441e58090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f675abba550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f675abba750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4442144490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44421446d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f675b16ae50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f675b177090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44426f6d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44426f6f90&gt;]</pre>
 </div>
 
 </div>
