--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c93d4ff50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fccce5c2650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c92e4a450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c92e4a650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fccce896310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fccce896510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c933fdd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c933fdf10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcccee59c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcccee59e90&gt;]</pre>
 </div>
 
 </div>
