--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb54cd02d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85b2729e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb5461e650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb5461e850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85b20df450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85b20df650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb54bdde90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb54bea0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85b269dd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85b269df50&gt;]</pre>
 </div>
 
 </div>
