--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f987166a510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ba8132390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f987194f590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f987194f7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ba72c9590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ba72c97d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9871f0ee50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9871f1b0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ba7885dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0ba7885fd0&gt;]</pre>
 </div>
 
 </div>
