--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8438ca6fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f94d579b990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84389ee650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8438980690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94d547d610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94d547d810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8438f40d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84386c8b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f94d5a3ae50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f94d5a47090&gt;]</pre>
 </div>
 
 </div>
