--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dea061ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11be565150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2de9a960d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2de9d5f490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11be244ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11be22d610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dea351590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dea300d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f11be8453d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f11be7d4e90&gt;]</pre>
 </div>
 
 </div>
