--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa2b5393e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46f01b5f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2b5353250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2b5353450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46f0492090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46f07696d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2b58f6b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa2b58f6d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f46f0d68810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f46f0d10fd0&gt;]</pre>
 </div>
 
 </div>
