--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46f01b5f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21efd69790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46f0492090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46f07696d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21f0185510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21f0185710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46f0d68810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46f0d10fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f21f0784450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f21f072ce50&gt;]</pre>
 </div>
 
 </div>
