--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f679fcad910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc70a67e190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f679fcd0450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f679fcd0650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc70ac46390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc70ac46590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67a0277cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67a0277ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc70b1e9c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc70b1e9e50&gt;]</pre>
 </div>
 
 </div>
